# SERVIER_test

./: .pylintrc  README.md  flat_result.json  main.py  pyproject.toml
areas/: __init__.py  area.py  data_frame.py  job.py  process_data.py  utils.py
areas/business/: __init__.py
areas/business/data/mention/: mention.csv  mention.pkl  mention_rejected.csv  mention_rejected.pkl
areas/business/jobs/: mention.py
areas/optimized/: __init__.py
areas/optimized/data/drugs/: drugs.pkl  drugs_rejected.csv
areas/optimized/data/journal/: journal.csv  journal.pkl  journal_rejected.csv  journal_rejected.pkl
areas/optimized/data/publication/: publication.pkl  publication_rejected.csv  publication_rejected.pkl
areas/optimized/jobs/: drugs.py  journal.py  publication.py
areas/raw/: __init__.py
areas/refined/: __init__.py
areas/refined/jobs/: clinical_trial.py  drugs.py  journal.py  pubmed.py
documentation/functional/: schema.py
documentation/technical/: areas.business.rst  areas.optimized.jobs.rst  areas.raw.rst  areas.refined.jobs.rst  areas.rst  conf.py  index.rst
tests/: __init__.py  utils.py
tests/business/: test_business_mention.py
tests/optimized/: test_optimized_drugs.py  test_optimized_journal.py  test_optimized_publication.py
tests/optimized/data/: drugs.csv  publication.csv
tests/raw/data/: clinical_trial.csv  drugs.csv  pubmed.csv  pubmed.json
tests/refined/: test_refined_clinical_trial.py  test_refined_drugs.py  test_refined_journal.py  test_refined_pubmed.py
tests/refined/data/: clinical_trial.csv  drugs.csv  pubmed.csv
(+43 files in other folders)
