[tool.poetry]
name = "servier"
version = "0.1.0"
description = ""
authors = ["n.pradere <praderen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.3"
pylint = "^3.3.1"
typing-extensions = "^4.12.2"
networkx = "^3.4.2"
matplotlib = "^3.9.2"
pytest = "^8.3.3"
sphinx = "^8.1.3"
sphinx-rtd-theme = "^3.0.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
